<resources>
    <string name="app_name">wikiRun</string>

    <string name="start_page_name">Start page name...</string>
    <string name="gen_start_page">GEN</string>
    <string name="end_page_name">End page name...</string>
    <string name="gen_end_page">GEN</string>
    <string name="run_button">RUN</string>
    <string name="reset_button">RESET</string>

    <string name="start_page">START PAGE</string>
    <string name="end_page">END PAGE</string>
    <string name="steps">STEPS</string>

    <string name="backward_button">BACKWARD</string>
    <string name="break_button">BREAK</string>
    <string name="forward_button">FORWARD</string>


    <string name="run_activity">GO</string>
    <string name="run_activity_name">WikiRun GO!!!</string>
</resources>
