<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_run"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oscore.wikirun.RunGame">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/info_bar_height"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="5"
        android:id="@+id/info_bar">
        <TextView
            android:fontFamily="Arial"
            android:text="@string/start_page"
            android:background="@drawable/info_bar_shapes"
            android:layout_width="0dp"
            android:layout_height="@dimen/info_bar_height"
            android:layout_weight="0"
            android:textAlignment="center"
            android:textSize="20dp"
            android:id="@+id/start_page" />
        <TextView
            android:fontFamily="Arial"
            android:text="@string/end_page"
            android:background="@drawable/info_bar_shapes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/info_bar_height"
            android:textSize="20dp"
            android:layout_weight="4"
            android:paddingLeft="0dp"
            android:textAlignment="center"
            android:id="@+id/end_page" />
        <TextView
            android:text="@string/steps"
            android:background="@drawable/info_bar_shapes"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/info_bar_height"
            android:textSize="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:id="@+id/steps"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="3"
        android:id="@+id/page_orientation">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backward_button"
            android:text="@string/backward_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/break_button"
            android:text="@string/break_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forward_button"
            android:text="@string/forward_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"/>
    </LinearLayout>

    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/web_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_bar"
        android:layout_above="@+id/page_orientation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
