<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.oscore.wikirun.MainPage"
    android:id="@+id/page_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="4"
        android:id="@+id/start_page_setup">
        <EditText
            android:fontFamily="Arial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/start_page_name"
            android:layout_weight="3"
            android:text="@string/start_page_name"
            android:inputType="text"
            android:textAlignment="center" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gen_start_page"
            android:layout_weight="1"
            android:text="@string/gen_start_page"
            android:textAlignment="center"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:weightSum="4"
        android:id="@+id/end_page_setup"
        android:layout_below="@+id/start_page_setup">
        <EditText
            android:fontFamily="Arial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_page_name"
            android:layout_weight="3"
            android:text="@string/end_page_name"
            android:inputType="text"
            android:textAlignment="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gen_end_page"
            android:layout_weight="1"
            android:text="@string/gen_end_page"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/game_options"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/run_button"
            android:layout_weight="1"
            android:text="@string/run_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:layout_weight="1"
            android:text="@string/reset_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/web_view_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_page_setup"
        android:layout_above="@+id/game_options"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
